navbar and layout

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,1 @@
-<h1>This is home component</h1>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora omnis perferendis quam iusto quia? Totam impedit nobis dolore! Vero ipsa atque repellendus unde dolores cumque. Sequi, hic. Nemo repudiandae dolore tempore, sequi veniam suscipit dicta nam magni animi molestias soluta culpa at sit vero pariatur cum repellendus illum magnam sint!
