--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,8 @@
 <app-nav-main></app-nav-main>
 
 <!-- home - products - brands - categories - cart -->
-<d
+<div class="container py-5">
+    <main class="content">
+        <router-outlet></router-outlet>
+    </main>
+</div>
