--- a/src/app/shared/nav-main/nav-main.component.html
+++ b/src/app/shared/nav-main/nav-main.component.html
@@ -57,7 +57,7 @@
         </li>
 
          <li class="nav-item" >
-          <a class="nav-link cursor-pointer" routerLinkActive="active-link">
+          <a class="nav-link cursor-pointer" (click)="_AuthService.signOut()">
             Signout
           </a>
         </li>
