--- a/src/app/layouts/auth-layout/auth-layout.component.css
+++ b/src/app/layouts/auth-layout/auth-layout.component.css
@@ -1,6 +1,9 @@
 :host {
-    display:  flex;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;
     min-height: 100vh;
+}
+
+:host .content {
+    flex: 1 1 auto;
 }
