--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,4 +1,6 @@
 
 <app-nav-auth></app-nav-auth>
 <!-- Login - Register -->
-<router-outlet></router-outlet>
+<main class="content container py-5">
+    <router-outlet></router-outlet>
+</main>
