--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,11 @@
   --rating-color: #ffc908;
 }
 
-body {
+html, body {
   font-family: var(--font-family) !important;
+  margin: 0;
+  padding: 0;
+
 }
 
 .nav-link {
