home page with subscription

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,91 @@
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta modi aliquid voluptas dicta eos quasi id assumenda, placeat et est! Vero nam vitae, reprehenderit incidunt quasi aperiam porro atque nemo? Mollitia, ab quibusdam distinctio debitis aliquid maxime dolores quisquam perferendis temporibus, in aperiam optio nemo consequatur voluptate modi laudantium perspiciatis repudiandae at dolor eligendi soluta impedit blanditiis! Fuga quas tempore eveniet ex deleniti. Laborum nostrum vitae, quisquam doloribus dolores repellat ullam. Accusantium consequuntur, incidunt nesciunt dolor ipsum placeat hic explicabo repellat vitae aliquid illo tempore quisquam esse assumenda autem voluptas eveniet asperiores suscipit rem fuga minima corrupti tenetur! Perferendis officiis totam laudantium laborum aspernatur error voluptas sequi necessitatibus quam quis tenetur nesciunt consectetur molestiae enim similique dolore debitis illum, dolorum commodi unde maxime quo? Sunt omnis asperiores rerum reiciendis minus labore ipsum, sit recusandae, unde facilis accusantium ex! Amet qui molestias praesentium minus. Eum quibusdam quo maiores laudantium in accusamus vitae dolores maxime sed nesciunt harum, at magni voluptate aut illo totam alias, illum consequatur cumque, fugiat ex! Ea nulla error dicta repudiandae sequi dolores qui assumenda veritatis incidunt recusandae. Totam amet facilis id? Repudiandae modi aperiam ad soluta, esse enim maiores qui ab adipisci harum corporis vel! Voluptatibus, itaque repellendus. Consequatur quasi modi qui velit, ullam quisquam magnam tempora molestiae itaque commodi iste nisi tenetur eos asperiores non odio quo aspernatur quis autem provident fugiat dignissimos incidunt adipisci rerum. Iste architecto sequi doloribus quos earum alias quia commodi cupiditate tempora, sed porro assumenda magnam reiciendis ab et laudantium dolores fuga labore voluptates? Laboriosam reiciendis deleniti similique pariatur voluptates eos illo dicta unde eveniet optio sint ex quas vel consequuntur tenetur alias in, necessitatibus, harum consequatur mollitia porro, enim nam sapiente a! Recusandae, deserunt accusamus! Rem quia numquam aliquam dolore eligendi porro excepturi vero autem distinctio fugiat quidem debitis quis quas explicabo provident aut tempora deserunt, quisquam impedit eveniet repellendus fuga quo voluptates? Iure cum dignissimos sit atque rerum consectetur ea suscipit a officiis nihil aliquid, dolor cupiditate magnam commodi doloribus adipisci nisi, quis ex sequi eveniet repellat. Pariatur sint nobis earum minima. Atque fuga qui tempore. Eius ab ad sint architecto atque in placeat neque tempora voluptatum quia dicta minima nisi rerum dolores, dolor enim totam cum ipsam officia perferendis voluptatem cumque possimus numquam et. Minima recusandae veritatis neque quod ad suscipit itaque quia, eos eveniet, optio asperiores consequatur nesciunt voluptas at illum! Accusamus repudiandae quia esse, non ea officia earum, corporis fugiat consequuntur ullam, optio deleniti nam quo totam! Commodi voluptas nesciunt ut voluptatibus totam a doloribus autem cumque architecto? Hic voluptates repellendus odit iusto numquam. Eveniet quod similique at hic ab itaque deleniti, voluptate doloremque repellendus possimus repudiandae, harum pariatur omnis iste tempora. Sed at autem in placeat expedita voluptate adipisci distinctio perspiciatis quaerat, deleniti error dignissimos blanditiis quis quod fugit voluptatum facere maxime non possimus a neque accusantium minus sapiente illo! Sapiente accusamus animi quasi voluptate facilis esse quam expedita, obcaecati, vero ratione voluptatibus dolore quidem doloribus itaque illo eos optio adipisci labore facere corrupti laboriosam. Aperiam eos quaerat veniam atque delectus aliquam illum odit aspernatur eum labore, eligendi laboriosam distinctio maxime consequuntur accusamus illo ratione repellendus cum esse expedita id cumque! Vel necessitatibus modi tempore reprehenderit iure a alias ratione iste itaque exercitationem sapiente, nostrum, culpa accusantium veritatis dolor excepturi fuga nesciunt beatae voluptatibus eveniet dolores unde! Magnam quas amet voluptatibus possimus quisquam eaque reprehenderit repellendus quaerat accusamus temporibus repellat, expedita praesentium et mollitia obcaecati quos blanditiis ab illum culpa optio sint quidem vitae dignissimos ad! Facilis laboriosam optio maxime laborum. Cum nobis repellendus soluta corporis atque excepturi quam esse eos ea nostrum totam quo, sed sint voluptas blanditiis ipsa, dolorem, et quos fugiat? Perspiciatis porro quia maxime unde debitis minima quam error delectus. Optio rerum fugiat magnam numquam consequuntur. Adipisci itaque, cum nisi veniam hic officiis minus accusamus qui labore facere velit placeat eligendi libero nam deserunt in quaerat quo atque sequi nihil a magnam. Excepturi facilis enim quisquam, ipsam accusamus eius. Ipsam laudantium id qui, nostrum totam possimus quasi accusamus, a ipsum dolor, magnam quaerat voluptate nihil nobis doloremque impedit iste! Iste, minus aliquid. Consectetur doloremque corporis labore deserunt quod laboriosam incidunt, optio impedit enim minima excepturi amet quia repellat perspiciatis ab! Mollitia error debitis suscipit adipisci tempore consequuntur? Vero molestias ratione doloremque quo earum nobis voluptates facilis inventore? Doloremque saepe impedit, pariatur nemo unde, alias reiciendis aperiam cupiditate dignissimos sed temporibus cumque ipsa quod autem numquam nulla distinctio quisquam. Optio explicabo doloremque iusto sint omnis dignissimos tempora pariatur dolore necessitatibus, suscipit magni qui provident assumenda eum eaque vitae impedit saepe officia quis illo voluptas deserunt excepturi quo quod! Sunt, minus? Numquam quos in atque quisquam, expedita a sint ullam repudiandae aut voluptatibus labore velit exercitationem rem esse quaerat, reiciendis tempora porro libero cumque voluptate quas. Maxime ipsam blanditiis, alias error officiis autem.</p>
+<!-- main slider -->
+
+<section>
+  <div class="row g-0">
+    <div class="col-md-9">
+      <div>
+
+         <owl-carousel-o [options]="customOptionsMain">
+            <ng-template carouselSlide>
+              <img src="../../../assets/images/slider-2.jpeg" height="400px" class="w-100" alt="">
+            </ng-template>  
+              <ng-template carouselSlide>
+              <img src="../../../assets/images/slider-image-2.jpeg" height="400px" class="w-100" alt="">
+            </ng-template>  
+              <ng-template carouselSlide>
+              <img src="../../../assets/images/slider-image-3.jpeg" height="400px" class="w-100" alt="">
+            </ng-template>  
+             
+   
+          </owl-carousel-o>
+
+
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div>
+        <img src="../../../assets/images/grocery-banner.png" height="200px" class="w-100" alt="">
+        <img src="../../../assets/images/grocery-banner-2.jpeg" height="200px" class="w-100" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- categories -->
+ <section class="my-2">
+  <h2 class="bg-black text-white w-100 text-center">Popular Categories</h2>
+   <owl-carousel-o [options]="customOptionsCat">
+
+    @for (cat of categoriesList; track cat._id) {
+      <ng-template carouselSlide>
+        <div>
+          <img [src]="cat.image" class="w-100" height="250px" [alt]="cat.name">
+          <h3 class="text-main h6">{{cat.name}}</h3>
+        </div>
+      </ng-template>
+    }
+
+  </owl-carousel-o>
+ </section>
+
+<!-- products -->
+<section>
+    <h2 class="bg-black text-white w-100 text-center">Popular Products</h2>
+    <div class="row g-3">
+
+        @for (product of productsList.slice(0,18); track product.id)
+        {
+            <div class="col-md-2">
+  <div class="product card border-0 shadow-sm h-100 text-center p-2">
+    <img [src]="product.imageCover" class="card-img-top img-fluid mx-auto w-100" [alt]="product.title">
+
+    <div class="card-body">
+      <p class="mb-1 small">{{product.category.name}}</p>
+
+      <h6 class="card-title mb-2 fw-semibold">
+        {{product.title.split(" ", 2).join(" ")}}
+      </h6>
+
+     <div class="div d-flex justify-content-between align-items-center">
+         <div class="mb-2 text-warning">
+            <span><i class="fas fa-star rating-color"></i></span>
+        <span class="text-muted small">{{product.ratingsAverage}}</span>
+      </div>
+
+      <h5 class="fw-medium mb-3">{{product.price}} EGP</h5>
+     </div>
+
+      
+    </div>
+
+    <button class="btn btn-main w-100">
+        Add to Cart
+      </button>
+  </div>
+</div>
+
+        }
+
+    </div>
+</section>
