--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <app-nav-main></app-nav-main>
 
 <!-- home - products - brands - categories - cart -->
-<div class="container py-5">
+<div class="container-fluid py-5">
     <main class="content">
         <router-outlet></router-outlet>
     </main>
