--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,4 +1,5 @@
 <app-nav-main></app-nav-main>
+<router-outlet></router-outlet>
 
 <!-- home - products - brands - categories - cart -->
 <div class="container-fluid py-5">
