--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,9 +1,8 @@
 <app-nav-main></app-nav-main>
-<router-outlet></router-outlet>
 
 <!-- home - products - brands - categories - cart -->
-<div class="container-fluid py-5">
-    <main class="content">
-        <router-outlet></router-outlet>
-    </main>
+<div class="container-fluid">
+  <main class="content">
+    <router-outlet></router-outlet>
+  </main>
 </div>
