--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -49,7 +49,9 @@
  
    
  
-  <button [disabled]="loginForm.invalid || isLoading" type="submit" class="btn text-white d-block ms-auto bg-main">
+  <div class="d-flex align-items-center justify-content-end">
+    <a routerLink="/forgot-password" class="link-primary">Forgot Password?</a>
+    <button [disabled]="loginForm.invalid || isLoading" type="submit" class="btn text-white d-block ms-auto bg-main">
     
     login
 @if (isLoading)
@@ -57,6 +59,7 @@
       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
     }
 </button>
+  </div>
 
   @if (errorMsg)
     {
