--- a/src/app/shared/nav-main/nav-main.component.css
+++ b/src/app/shared/nav-main/nav-main.component.css
@@ -1,4 +1,8 @@
 .nav-back {
-    background-color: #FFFFFF;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  background-color: #ffffff;
 }
