--- a/src/app/shared/nav-main/nav-main.component.html
+++ b/src/app/shared/nav-main/nav-main.component.html
@@ -1,70 +1,95 @@
 <nav class="navbar navbar-expand-lg nav-back">
-  <div class="container-fluid">
+  <div class="container px-4 py-2">
     <a class="navbar-brand" routerLink="home">
-        <img src="./assets/images/Logo.png" alt="">
+      <img src="./assets/images/Logo.png" alt="" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="home" routerLinkActive="active-link">Home</a>
+          <a class="nav-link" routerLink="home" routerLinkActive="active-link"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="products" routerLinkActive="active-link">Products</a>
+          <a
+            class="nav-link"
+            routerLink="products"
+            routerLinkActive="active-link"
+            >Products</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="categories" routerLinkActive="active-link">Categories</a>
+          <a
+            class="nav-link"
+            routerLink="categories"
+            routerLinkActive="active-link"
+            >Categories</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="brands" routerLinkActive="active-link">Brands</a>
+          <a class="nav-link" routerLink="brands" routerLinkActive="active-link"
+            >Brands</a
+          >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="cart" routerLinkActive="active-link">Cart</a>
-        </li>
-      
-       
-      
       </ul>
-
-        <ul class="navbar-nav ms-auto">
-      
-        <li class="nav-item">
+      <ul class="navbar-nav ms-auto">
+        <!--
+                <li class="nav-item">
           <a class="nav-link">
             <i class="fa-brands fa-facebook"></i>
           </a>
         </li>
-       <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link">
             <i class="fa-brands fa-twitter"></i>
           </a>
         </li>
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link">
             <i class="fa-brands fa-youtube"></i>
           </a>
         </li>
-
-         <li class="nav-item" >
+        -->
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            routerLink="wishlist"
+            routerLinkActive="active-link"
+            ><i class="fa-regular fa-heart"></i
+          ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="cart" routerLinkActive="active-link"
+            ><i class="fa-solid fa-cart-shopping"></i
+          ></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link cursor-pointer" (click)="_AuthService.signOut()">
-            Signout
+            <i class="fa-regular fa-user"></i>
           </a>
         </li>
-       
-      
       </ul>
-    
     </div>
   </div>
 </nav>
