added interceptors for header, error, loading

--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -38,7 +38,7 @@
      </div>
         </div>
 
-        <button class="btn btn-main rounded-3 fw-semibold py-2 w-100">
+        <button class="btn btn-main rounded-3 fw-semibold py-2 w-100" (click)="addToCart(product.id)">
           Add To Cart
         </button>
       </div>
